crates/analyzer/tests/snapshots/errors__call_undefined_function_on_storage_struct.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: No function `doesnt_exist` exists on type `Something`
  ┌─ compile_errors/call_undefined_function_on_storage_struct.fe:8:17
  │
8 │     self.thingy.doesnt_exist()
  │                 ^^^^^^^^^^^^ undefined function


